--- a/kytc-user-server/pom.xml
+++ b/kytc-user-server/pom.xml
@@ -38,10 +38,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -62,6 +58,11 @@
         <dependency>
             <groupId>com.kytc</groupId>
             <artifactId>framework-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kytc</groupId>
+            <artifactId>framework-consul</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
